Add wrangler latest globally, instruct the model to use non-interactive flags and simplify if a command waits for input

--- a/compose.yml
+++ b/compose.yml
@@ -22,3 +22,5 @@ services:
     environment:
       - WORKSPACE_ROOT=/workspace
       - NPM_CONFIG_CACHE=/tmp/.npm-cache
+      - NPM_CONFIG_YES=true
+      - NPX_YES=1
